Better design for add category activity

--- a/TagSaver/app/src/main/res/layout/addcategory.xml
+++ b/TagSaver/app/src/main/res/layout/addcategory.xml
@@ -35,13 +35,20 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="end">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="370dp">
+        </android.support.v7.widget.RecyclerView>
+
 
         <Button
             android:id="@+id/done_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="bottom|right"
             android:elevation="0dp"
             android:text="Done" />
     </FrameLayout>
