--- a/TagSaver/app/src/main/res/layout/addcategory.xml
+++ b/TagSaver/app/src/main/res/layout/addcategory.xml
@@ -38,11 +38,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="end">
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="370dp">
-        </android.support.v7.widget.RecyclerView>
-
 
         <Button
             android:id="@+id/done_button"
@@ -51,6 +46,10 @@
             android:layout_gravity="bottom|right"
             android:elevation="0dp"
             android:text="Done" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
     </FrameLayout>
 
 </LinearLayout>
