--- a/TagSaver/app/src/main/res/layout/addcategory.xml
+++ b/TagSaver/app/src/main/res/layout/addcategory.xml
@@ -48,8 +48,8 @@
             android:text="Done" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
     </FrameLayout>
 
 </LinearLayout>
