--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
     android:orientation="vertical"
     android:padding="8sp"
-    tools:context="com.example.jeremy.tagsaver.MainActivity">
+    tools:context="com.example.tagsaver.MainActivity">
 
     <EditText
         android:id="@+id/et_search_box"
@@ -36,10 +36,10 @@
             android:visibility="invisible" />
 
         <!--<EditText-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="Add the new category's name"-->
-            <!--/>-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="Add the new category's name"-->
+        <!--/>-->
 
 
 
