--- a/app/src/main/res/layout/addcategory.xml
+++ b/app/src/main/res/layout/addcategory.xml
@@ -9,8 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter your new category's name"/>
-
-
     <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -48,8 +46,10 @@
             android:text="Done" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:id="@+id/rv_tags_list"
+            android:layout_width="match_parent"
+            android:layout_height="345dp">
+        </android.support.v7.widget.RecyclerView>
     </FrameLayout>
 
 </LinearLayout>
