--- a/app/src/main/res/layout/tag_list_items.xml
+++ b/app/src/main/res/layout/tag_list_items.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="25dp"
+    android:layout_height="33dp"
     android:orientation="vertical"
     android:weightSum="1">
 
     <TextView
         android:id="@+id/tagTextView"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_weight="0.08"
-        android:text="TextView" />
+        android:layout_height="36dp"
+        android:paddingLeft="15sp"
+        android:text="TextView"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 </LinearLayout>
