--- a/app/src/main/res/layout/cat_list_items.xml
+++ b/app/src/main/res/layout/cat_list_items.xml
@@ -4,25 +4,39 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="2">
 
     <TextView
         android:id="@+id/catTextView"
         android:layout_width="1dp"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:layout_gravity="left|center_vertical"
-        android:layout_weight="1"
+        android:layout_weight="1.63"
         android:ellipsize="end"
         android:gravity="left|center_vertical"
         android:maxLines="1"
         android:textSize="25sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/scoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.36"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="1250000" />
+
+    <Button
+        android:id="@+id/buttonCopy"
+        android:layout_width="72dp"
+        android:layout_height="match_parent"
+        android:text="Copy" />
+
     <Button
         android:id="@+id/catEditBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit" />
+        android:layout_height="match_parent"
+        android:text="Details" />
 
 
 </LinearLayout>
