--- a/app/src/main/res/layout/tag_list_items.xml
+++ b/app/src/main/res/layout/tag_list_items.xml
@@ -4,19 +4,27 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="1.55">
 
     <TextView
         android:id="@+id/tagTextView"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left|center_vertical"
-        android:layout_weight="1"
+        android:layout_weight="1."
         android:ellipsize="end"
         android:gravity="left|center_vertical"
         android:maxLines="1"
         android:textSize="25sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/score"
+        android:layout_height="match_parent"
+        android:text="12000000"
+        android:gravity="center"
+        android:layout_weight="0.55"/>
 
     <Button
         android:id="@+id/tagRmvBtn"
